# workshop_python_brasil_2021

./: .gitignore  README.md  pyproject.toml
meliarena/: __init__.py  models.py  views.py
meliarena/api/: __init__.py  items.py  utils.py
meliarena/home/: __init__.py
meliarena/static/: main.js
meliarena/static/js/: main.js  main.js.old
meliarena/templates/: index.html
tests/: conftest.py  test_views.py
