[tool.poetry]
name = "workshop_python_brasil_2021"
version = "0.1.0"
description = "Meli Arena - Python Brasil 2021 - Workshop"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
