[tool.poetry]
name = "workshop_python_brasil_2021"
version = "0.1.0"
description = "Meli Arena - Python Brasil 2021 - Workshop"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2, <4"
Flask = "^2.0.2"
requests = "^2.26.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-DB = "^0.3.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-flask = "^1.2.0"
coverage = "^6.0.2"
black = "^21.9b0"
flake8 = "^4.0.1"
pylint = "^2.11.1"
pre-commit = "^2.15.0"
pylint-flask-sqlalchemy = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
